--- a/ASP.NET_WebApp/ASP.NET_WebApp/appsettings.json
+++ b/ASP.NET_WebApp/ASP.NET_WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:DESKTOP-HSTK13M\\SQLEXPRESS;Database=WebApp;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
